--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="AWS Partner Central API - Opportunity Management Sample"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>AWS Partner Central API - Opportunity Management</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            line-height: 1.6;
-            color: #333;
-        }
-        .container {
-            text-align: center;
-            background: #f8f9fa;
-            padding: 40px;
-            border-radius: 8px;
-            border: 1px solid #e9ecef;
-        }
-        h1 {
-            color: #232f3e;
-            margin-bottom: 20px;
-        }
-        .btn {
-            display: inline-block;
-            background: #ff9900;
-            color: white;
-            padding: 12px 24px;
-            text-decoration: none;
-            border-radius: 4px;
-            margin: 10px;
-            font-weight: bold;
-        }
-        .btn:hover {
-            background: #e88b00;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>AWS Partner Central API - Opportunity Management Sample</h1>
-        <p>This sample application has been moved to help you deploy it on your own environment.</p>
-        <p>To run this application locally or deploy it to your own GitHub Pages:</p>
-        <a href="https://github.com/aws-samples/partner-crm-integration-samples/tree/main/partner-central-api-sample-codes/opportunityManagement" class="btn">
-            View Setup Instructions
-        </a>
-        <p style="margin-top: 30px; font-size: 14px; color: #666;">
-            Follow the README instructions in the opportunityManagement folder for deployment steps.
-        </p>
-    </div>
-</body>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
